# pylandau

./: .gitignore  .travis.yml  MANIFEST.in  README.md  appveyor.yml  pyproject.toml  requirements.txt  requirements_tests.txt  setup.cfg  setup.py
.github/workflows/: tests.yml  wheels.yml
appveyor/: install.ps1  installPython.ps1
examples/: fit.py  fit_advanced.py  integrate.py  landau_gauss.py  mpv_fwhm.py  plot.py
pyLandau/cpp/: landau.pyx  landau_src.cpp  pylandau.cpp  pylandau.pyx  pylandau_src.cpp
pyLandau/numba/: pylandau.py
pylandau/: __init__.py  pylandau_src.py
pylandau/cpp/: pylandau.cpp  pylandau_src.cpp
src/: landaulib.cpp  landaulib.pyx  pylandau.cpp  pylandau_src.py
tests/: constrains.py  constraints.py  test.py  test_data_types.py  test_exceptions.py  test_fuzzing.py  test_properties.py
