[project]
name = 'pylandau'
version = '2.2.1'
description = 'A Landau PDF definition to be used in Python.'
license = {file = 'LICENSE'}
requires-python = '>=3.8'
readme = 'README.md'
authors = [
    {name = 'David-Leon Pohl', email = 'pohl@physik.uni-bonn.de'}, 
    {name = 'Christian Bespin', email = 'bespin@physik.uni-bonn.de'}
]
maintainers = [ 
    {name = 'Christian Bespin', email = 'bespin@physik.uni-bonn.de'}
]
dependencies = [
  "cython>=0.29",
  "numpy>=1.21",
  "scipy>=1.7",
]

[project.urls]
repository = 'https://github.com/SiLab-Bonn/pyLandau'

[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools",
    "wheel",
    "numpy>=1.21",
    "cython>=0.29",
]  # PEP 508 specifications
build-backend = "setuptools.build_meta"
