[project]
name = 'pylandau'
version = '3.0.0'
description = 'A Landau PDF definition to be used in Python.'
license = {file = 'LICENSE'}
requires-python = '>=3.10'
readme = 'README.md'
authors = [
    {name = 'David-Leon Pohl', email = 'pohl@physik.uni-bonn.de'}, 
    {name = 'Christian Bespin', email = 'cbespin@uni-bonn.de'}
]
maintainers = [ 
    {name = 'Christian Bespin', email = 'cbespin@uni-bonn.de'},
    {name = 'Pascal Wolf', email = 'wolf@physik.uni-bonn.de'}
]
dependencies = [
  "numba>=0.53",
  "numpy>=1.21",
  "scipy>=1.7",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
repository = 'https://github.com/SiLab-Bonn/pyLandau'

[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools",
    "wheel",
    "numpy>=1.21",
    "numba>=0.53",
    "scipy>=1.7",
]  # PEP 508 specifications
build-backend = "setuptools.build_meta"
